--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ DB_USER=postgres
 DB_PASS=docker
 DB_NAME=gobarber
 
-MONGO_URL=mongodb://localhost:27017/gobarber03
+MONGO_URL=mongodb://localhost:27017/gobarber
 
 REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
